--- a/app/css/style.css
+++ b/app/css/style.css
@@ -5,12 +5,18 @@ body {
 h1 {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  color: #000; }
+  color: #000;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 5px; }
 
 h3 {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  color: #000; }
+  color: #000;
+  width: 100%;
+  text-align: center;
+  margin-top: 5px; }
 
 p {
   font-family: "Roboto", sans-serif;
@@ -34,24 +40,63 @@ header {
   z-index: 3; }
 
 .logo_nasa {
-  position: absolute;
+  position: fixed;
   width: 100px;
   height: auto;
   z-index: 3;
   top: 20px;
   right: 20px; }
 
+.mt-3 {
+  margin-top: 3em; }
+
 .main {
   position: relative;
   margin: 0 auto;
   z-index: 2; }
+
+.container-btn {
+  width: 30%;
+  position: relative;
+  margin: 0 auto;
+  text-align: center; }
+  .container-btn a {
+    font-family: "Roboto", sans-serif;
+    background-color: #000;
+    color: #FFF;
+    font-size: 1.2em;
+    text-decoration: none;
+    padding: 5px 10px 5px 10px;
+    border: 1px solid #000;
+    border-radius: 3px;
+    transition: all 0.2s ease-in-out;
+    margin-right: 3%; }
+    .container-btn a:hover {
+      opacity: 0.8; }
+  .container-btn button {
+    font-family: "Roboto", sans-serif;
+    background-color: #FFF;
+    color: #000;
+    font-size: 1.2em;
+    text-decoration: none;
+    padding: 5px 10px 5px 10px;
+    border: 1px solid #000;
+    border-radius: 3px;
+    transition: all 0.2s ease-in-out;
+    outline: none; }
+    .container-btn button:hover {
+      opacity: 0.8; }
 
 .grid {
   padding-top: 30vh;
   position: relative;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  margin-bottom: 30vh; }
+
+.img_grid_spe {
+  display: inline-block; }
 
 .img_grid_container {
   position: relative;
