--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,12 +14,18 @@ h1 {
     font-family: $m-font;
     font-weight: 700;
     color: #000;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 5px;
 }
 
 h3 {
     font-family: $m-font;
     font-weight: 300;
     color: #000;
+    width: 100%;
+    text-align: center;
+    margin-top: 5px;
 }
 
 p {
@@ -47,12 +53,16 @@ header {
 }
 
 .logo_nasa {
-    position: absolute;
+    position: fixed;
     width: 100px;
     height: auto;
     z-index: 3;
     top: 20px;
     right: 20px;
+}
+
+.mt-3 {
+    margin-top: 3em;
 }
 
 .main {
@@ -61,12 +71,58 @@ header {
     z-index: 2;
 }
 
+.container-btn {
+    width: 30%;
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+
+    a {
+        font-family: $m-font;
+        background-color: #000;
+        color:#FFF;
+        font-size: 1.2em;
+        text-decoration: none;
+        padding: 5px 10px 5px 10px;
+        border: 1px solid #000;
+        border-radius: 3px;
+        transition: all 0.2s ease-in-out;
+        margin-right: 3%;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    button {
+        font-family: $m-font;
+        background-color: #FFF;
+        color:#000;
+        font-size: 1.2em;
+        text-decoration: none;
+        padding: 5px 10px 5px 10px;
+        border: 1px solid #000;
+        border-radius: 3px;
+        transition: all 0.2s ease-in-out;
+        outline: none;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+}
+
 .grid {
     padding-top: 30vh;
     position: relative;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-bottom: 30vh;
+}
+
+.img_grid_spe {
+    display: inline-block;
 }
 
 .img_grid_container {
