--- a/app/css/style.css
+++ b/app/css/style.css
@@ -16,7 +16,8 @@ h3 {
   color: #000;
   width: 100%;
   text-align: center;
-  margin-top: 5px; }
+  margin-top: 5px;
+  margin-bottom: 2em; }
 
 p {
   font-family: "Roboto", sans-serif;
@@ -46,6 +47,8 @@ header {
   z-index: 3;
   top: 20px;
   right: 20px; }
+  .logo_nasa:hover {
+    cursor: pointer; }
 
 .mt-3 {
   margin-top: 3em; }
@@ -96,7 +99,7 @@ header {
   margin-bottom: 30vh; }
 
 .img_grid_spe {
-  display: inline-block; }
+  display: block; }
 
 .img_grid_container {
   position: relative;
@@ -122,4 +125,14 @@ header {
   width: 100%;
   z-index: 2;
   margin: 0px;
+  margin-bottom: -5px;
   display: inline-block; }
+
+.modal {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  height: 100vh;
+  background-color: #FFF;
+  text-align: center;
+  opacity: 1; }
